--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <video autoplay loop muted src="image/video.mp4"></video>
       <div class="minus">
         <div class="container">
-          <div class="row d-flex justify-content-between align-items-end">
+          <div class="row d-flex justify-content-between align-items-center">
             <div class="col-lg-7">
               <div>
                 <h2>
